--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Portfólio de Matheus Zaramello">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cevini.github.io/zara-portfolio/style.css">
     <script src="https://kit.fontawesome.com/5d602d132f.js"></script>
     <title>Matheus Zaramello | Portfólio</title>
   </head>
@@ -160,6 +160,6 @@
       <p style="text-align:center;margin-top:20px">2022 | @ce_vini</p>
     </section>
 
-<script type="text/javascript" src="js/script.js"></script>
+<script type="text/javascript" src="https://cevini.github.io/zara-portfolio/script.js"></script>
   </body>
 </html>
