--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </a>
     <header>
       <div class="nav container">
-        <a href="#" class="logo">Matheus Zaramello</a>
+        <h1 class="logo">Matheus Zaramello</h1>
         <ul class="menu navbar">
           <li><a href="#inicio" class="nav-link">Início</a></li>
           <li><a href="#sobre" class="nav-link">Sobre</a></li>
