--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
             <p>[Inserir uma frase top que resume tudo o que tu é nesse momento]</p>
             <!-- Lembrar de colocar Span nas palavras de importância e Br -->
             <div class="social">
-              <a href="#"><i class="fa-brands fa-twitch"></i></a>
-              <a href="#"><i class="fa-brands fa-instagram"></i></a>
-              <a href="#"><i class="fa-solid fa-scissors"></i></a>
+              <a href="https://www.twitch.tv/zaramberg_"><i class="fa-brands fa-twitch"></i></a>
+              <a href="https://www.instagram.com/matheusvzaramello/"><i class="fa-brands fa-instagram"></i></a>
+              <a href="https://www.instagram.com/zarabarbershop/"><i class="fa-solid fa-scissors"></i></a>
             </div>
           </div>
         </div>
@@ -101,7 +101,7 @@
           <img src="https://i.imgur.com/BPoqDou.png" class="portfolio-img">
           <div class="portfolio-overlay">
             <h2>Design</h2>
-            <a href="#">
+            <a href="https://www.instagram.com/p/COiogAtjQCc/">
               <i class="fa-solid fa-link"></i>
             </a>
           </div>
@@ -110,7 +110,7 @@
           <img src="https://i.imgur.com/7eofUo5.png" class="portfolio-img">
           <div class="portfolio-overlay">
             <h2>Cosplay</h2>
-            <a href="#">
+            <a href="https://www.instagram.com/zara.cosplay_/">
               <i class="fa-solid fa-link"></i>
             </a>
           </div>
@@ -119,7 +119,7 @@
           <img src="https://i.imgur.com/ISY7sO9.png" class="portfolio-img">
           <div class="portfolio-overlay">
             <h2>ZaraBarberShop</h2>
-            <a href="#">
+            <a href="https://www.instagram.com/p/CRt2EZQFONa/">
               <i class="fa-solid fa-link"></i>
             </a>
           </div>
@@ -136,9 +136,9 @@
           <p>[Inserir Descrição] Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
             Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
           <div class="social">
-            <a href="#"><i class="fa-brands fa-twitch"></i></a>
-            <a href="#"><i class="fa-brands fa-instagram"></i></a>
-            <a href="#"><i class="fa-solid fa-scissors"></i></a>
+              <a href="https://www.twitch.tv/zaramberg_"><i class="fa-brands fa-twitch"></i></a>
+              <a href="https://www.instagram.com/matheusvzaramello/"><i class="fa-brands fa-instagram"></i></a>
+              <a href="https://www.instagram.com/zarabarbershop/"><i class="fa-solid fa-scissors"></i></a>
           </div>
         </div>
         <div class="contact-box">
@@ -157,7 +157,7 @@
         </div>
       </div>
     </div>
-      <p style="text-align:center;margin-top:20px">2022 | @ce_vini</p>
+      <p style="text-align:center;margin-top:20px;color: var(--bg-color)">2022 | <a href="https://www.instagram.com/ce_vini/">@ce_vini</a></p>
     </section>
 
 <script type="text/javascript" src="https://cevini.github.io/zara-portfolio/script.js"></script>
