--- a/index.html
+++ b/index.html
@@ -96,30 +96,36 @@
 
     <section class="portfolio container" id="portfolio">
       <h2 class="heading">Portfólio</h2>
+      <ul>
+        <li class="list list-active" data-filter="tudo">Tudo</li>
+        <li class="list" data-filter="design">Design</li>
+        <li class="list" data-filter="cortes">Cortes</li>
+        <li class="list" data-filter="cosplay">Cosplay</li>
+      </ul>
       <div class="portfolio-content">
-        <div class="portfolio-box">
+        <div class="portfolio-box" data-item="design">
           <img src="https://i.imgur.com/BPoqDou.png" class="portfolio-img">
           <div class="portfolio-overlay">
             <h2>Design</h2>
-            <a href="https://www.instagram.com/p/COiogAtjQCc/">
+            <a href="#">
               <i class="fa-solid fa-link"></i>
             </a>
           </div>
         </div>
-        <div class="portfolio-box">
+        <div class="portfolio-box" data-item="cosplay">
           <img src="https://i.imgur.com/7eofUo5.png" class="portfolio-img">
           <div class="portfolio-overlay">
             <h2>Cosplay</h2>
-            <a href="https://www.instagram.com/zara.cosplay_/">
+            <a href="#">
               <i class="fa-solid fa-link"></i>
             </a>
           </div>
         </div>
-        <div class="portfolio-box">
+        <div class="portfolio-box" data-item="cortes">
           <img src="https://i.imgur.com/ISY7sO9.png" class="portfolio-img">
           <div class="portfolio-overlay">
             <h2>ZaraBarberShop</h2>
-            <a href="https://www.instagram.com/p/CRt2EZQFONa/">
+            <a href="#">
               <i class="fa-solid fa-link"></i>
             </a>
           </div>
