--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@
           <div class="home-text">
             <h3>Hello!</h3>
             <h2>Sou <span class="color">Matheus Zaramello</span></h2>
-            <p>[Inserir uma frase top que resume tudo o que tu é nesse momento]</p>
-            <!-- Lembrar de colocar Span nas palavras de importância e Br -->
+            <p>"Seja a mudança que você quer ver no mundo" - <span class="color">Mahatma Gandhi</span> </p>
             <div class="social">
               <a href="https://www.twitch.tv/zaramberg_"><i class="fa-brands fa-twitch"></i></a>
               <a href="https://www.instagram.com/matheusvzaramello/"><i class="fa-brands fa-instagram"></i></a>
@@ -56,14 +55,17 @@
       <h2 class="heading">Sobre Mim</h2>
       <div class="about-content">
         <div class="about-img">
-          <img src="https://i.imgur.com/w5qb1Tv.jpg" alt="">
+          <img src="https://i.imgur.com/k9GCehJ.png" alt="">
         </div>
         <div class="about-text">
-          <h2>[Inserir uma frase de início para o texto abaixo]...</h2>
-          <p>Olá, meu nome é Matheus Zaramello, conhecido como Zara. Sou barbeiro há cerca de 8 anos,
-          instrutor há 5 anos e trabalho com uma metodologia diferenciada de corte de cabelo e barba,
-          utilizando a anatomia do cliente para fazer um corte único e personalizado, usufruindo de todas as
-          características do cliente para melhor atendimento.</p>
+          <h2>Matheus Voltarelli Zaramello</h2>
+          <p>Tenho 23 anos, moro em Jundiaí e sou casado com a mulher mais doce de São Paulo.
+            Amo tocar instrumentos musicais sendo hoje em dia um multi-instrumentista buscando sempre me aprimorar.
+            Desenho desde os 6 anos e com o passar do tempo, usando ferramentas para produção de conteúdo, eu transmito
+            essa criatividade em design de imagens, logotipos e muito mais.
+            Sou barbeiro e cabelereiro há 8 anos e instrutor da profissão há 5 anos.
+            Me amarro em videogames, filmes, séries e animes, mundo pop e geek em geral - Hoje sou Cosplayer.
+            Sinto prazer em ajudar as pessoas, de fazer novas amizades e sempre procuro ser o melhor de mim mesmo todos os dias.</p>
         </div>
       </div>
     </section>
@@ -71,25 +73,25 @@
     <section class="services container" id="servicos">
       <h2 class="heading">Serviços</h2>
       <div class="services-content">
-        <div class="services-box">
+        <div class="services-box box1">
+          <i class="fa-solid fa-scissors"></i>
+          <h2>Barbeiro</h2>
+          <p>Trabalho com uma metodologia diferenciada de corte de cabelo e barba, ultilizando a
+            anatomia do cliente para fazer um corte único e personalizado, usufruindo de todas as
+            características do cliente para melhor atendimento.</p>
+        </div>
+        <div class="services-box box2">
           <i class="fa-solid fa-wand-magic-sparkles"></i>
           <h2>Designer Gráfico</h2>
-          <p>[Inserir descrição] Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <p>Manuseio ferramentas de edição como Photoshop, CorelDRAW e Sony Vegas desde os 16 anos. Crio e desenvolvo imagens, logos, flyers
+          e principalmente fotos para os meus cosplayers.</p>
         </div>
-        <div class="services-box">
-          <i class="fa-solid fa-network-wired"></i>
-          <h2>Gestor de Tráfego</h2>
-          <p>[Inserir descrição] Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        </div>
-        <div class="services-box">
+        <div class="services-box box3">
           <i class="fa-solid fa-user-astronaut"></i>
           <h2>Cosplayer</h2>
-          <p>[Inserir descrição] Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        </div>
-        <div class="services-box">
-          <i class="fa-solid fa-scissors"></i>
-          <h2>Cabelereiro</h2>
-          <p>[Inserir descrição] Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <p>Sempre amei o universo geek e passei a ser cosplayer em 2019. Sou conhecido mais pelo cosplay de Nathan Drake de Uncharted e faço
+           outros como Joel de The Last Of Us e Spider-Man. Me divirto com a idéia de nos fantasiar daquele personagem que tanto gostamos desde
+          criança, e hoje com condições físicas e financeiras posso tornar isso realidade; fazendo até outras pessoas felizes.</p>
         </div>
       </div>
     </section>
@@ -106,8 +108,8 @@
         <div class="portfolio-box" data-item="design">
           <img src="https://i.imgur.com/BPoqDou.png" class="portfolio-img">
           <div class="portfolio-overlay">
-            <h2>Design</h2>
-            <a href="#">
+            <h2>Spider-Man: Homecoming</h2>
+            <a href="https://www.instagram.com/p/COiogAtjQCc/">
               <i class="fa-solid fa-link"></i>
             </a>
           </div>
@@ -115,8 +117,8 @@
         <div class="portfolio-box" data-item="cosplay">
           <img src="https://i.imgur.com/7eofUo5.png" class="portfolio-img">
           <div class="portfolio-overlay">
-            <h2>Cosplay</h2>
-            <a href="#">
+            <h2>Nathan Drake</h2>
+            <a href="https://www.instagram.com/p/CaF41u1lUKy/">
               <i class="fa-solid fa-link"></i>
             </a>
           </div>
@@ -125,7 +127,7 @@
           <img src="https://i.imgur.com/ISY7sO9.png" class="portfolio-img">
           <div class="portfolio-overlay">
             <h2>ZaraBarberShop</h2>
-            <a href="#">
+            <a href="https://www.instagram.com/p/CRt2EZQFONa/">
               <i class="fa-solid fa-link"></i>
             </a>
           </div>
@@ -134,36 +136,37 @@
     </section>
 
     <section class="contact" id="contato">
-    <div class="container">
-      <h2 class="heading">Contato</h2>
-      <div class="contact-content">
-        <div class="contact-box">
-          <h4>Redes Sociais</h4>
-          <p>[Inserir Descrição] Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-          <div class="social">
+      <div class="container">
+        <h2 class="heading">Contato</h2>
+        <div class="contact-content">
+          <div class="contact-box">
+            <h4>Redes Sociais</h4>
+            <p>Faço lives na Twitch junto com a minha esposa jogando e tocando músicas junto com a galera.
+            Me siga no Instagram pra me acompanhar e ficar por dentro do meu trabalho, hobbies e cosplayers!
+            Contatos para trabalho ao lado →</p>
+            <div class="social">
               <a href="https://www.twitch.tv/zaramberg_"><i class="fa-brands fa-twitch"></i></a>
-              <a href="https://www.instagram.com/matheusvzaramello/"><i class="fa-brands fa-instagram"></i></a>
+              <a href="https://www.instagram.com/zara.cosplay_/"><i class="fa-brands fa-instagram"></i></a>
               <a href="https://www.instagram.com/zarabarbershop/"><i class="fa-solid fa-scissors"></i></a>
+            </div>
           </div>
-        </div>
-        <div class="contact-box">
-          <div class="contact-line">
-            <i class="fa-solid fa-location-dot"></i>
-            <p>Atibaia | SP</p>
-          </div>
-          <div class="contact-line">
-            <i class="fa-solid fa-phone"></i>
-            <p>(00) 0000-0000</p>
-          </div>
-          <div class="contact-line">
-            <i class="fa-solid fa-envelope"></i>
-            <p>exemplo@hotmail.com</p>
+          <div class="contact-box">
+            <div class="contact-line">
+              <i class="fa-solid fa-location-dot"></i>
+              <p>Jundiaí | SP</p>
+            </div>
+            <div class="contact-line">
+              <i class="fa-solid fa-phone"></i>
+              <p>(11) 98099-6580</p>
+            </div>
+            <div class="contact-line">
+              <i class="fa-solid fa-envelope"></i>
+              <p>matheuszaramello@gmail.com</p>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-      <p style="text-align:center;margin-top:20px;color: var(--bg-color)">2022 | <a href="https://www.instagram.com/ce_vini/">@ce_vini</a></p>
+        <p style="text-align:center;margin-top:20px">2022 | <a href="https://www.instagram.com/ce_vini/">@ce_vini</a></p>
     </section>
 
 <script type="text/javascript" src="https://cevini.github.io/zara-portfolio/script.js"></script>
