--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <div class="home-text">
             <h3>Hello!</h3>
             <h2>Sou <span class="color">Matheus Zaramello</span></h2>
-            <p>"Seja a mudança que você quer ver no mundo" - <span class="color">Mahatma Gandhi</span> </p>
+            <p>"Seja a mudança que você quer ver no mundo"<br> - <span class="color">Mahatma Gandhi</span> </p>
             <div class="social">
               <a href="https://www.twitch.tv/zaramberg_"><i class="fa-brands fa-twitch"></i></a>
               <a href="https://www.instagram.com/matheusvzaramello/"><i class="fa-brands fa-instagram"></i></a>
