--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             <h4>Redes Sociais</h4>
             <p>Faço lives na Twitch junto com a minha esposa jogando e tocando músicas junto com a galera.
             Me siga no Instagram pra me acompanhar e ficar por dentro do meu trabalho, hobbies e cosplayers!
-            Contatos para trabalho ao lado →</p>
+            ↓ Contatos para trabalho abaixo.</p>
             <div class="social">
               <a href="https://www.twitch.tv/zaramberg_"><i class="fa-brands fa-twitch"></i></a>
               <a href="https://www.instagram.com/zara.cosplay_/"><i class="fa-brands fa-instagram"></i></a>
