--- a/index.html
+++ b/index.html
@@ -142,8 +142,7 @@
           <div class="contact-box">
             <h4>Redes Sociais</h4>
             <p>Faço lives na Twitch junto com a minha esposa jogando e tocando músicas junto com a galera.
-            Me siga no Instagram pra me acompanhar e ficar por dentro do meu trabalho, hobbies e cosplayers!
-            ↓ Contatos para trabalho abaixo.</p>
+            Me siga no Instagram pra me acompanhar e ficar por dentro do meu trabalho, hobbies e cosplayers!</p>
             <div class="social">
               <a href="https://www.twitch.tv/zaramberg_"><i class="fa-brands fa-twitch"></i></a>
               <a href="https://www.instagram.com/zara.cosplay_/"><i class="fa-brands fa-instagram"></i></a>
@@ -151,6 +150,7 @@
             </div>
           </div>
           <div class="contact-box">
+            <p>Contatos para trabalho.</p>
             <div class="contact-line">
               <i class="fa-solid fa-location-dot"></i>
               <p>Jundiaí | SP</p>
