--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
     </a>
     <header>
       <div class="nav container">
-        <h1 class="logo">Matheus Zaramello</h1>
         <ul class="menu navbar">
           <li><a href="#inicio" class="nav-link">Início</a></li>
           <li><a href="#sobre" class="nav-link">Sobre</a></li>
@@ -38,7 +37,7 @@
             <img src="https://i.imgur.com/7HHhSEG.jpg" alt="">
           </div>
           <div class="home-text">
-            <h3>Hello!</h3>
+            <h3>Designer, Barbero & Cosplayer</h3>
             <h2>Sou <span class="color">Matheus Zaramello</span></h2>
             <p>"Seja a mudança que você quer ver no mundo"<br> - <span class="color">Mahatma Gandhi</span> </p>
             <div class="social">
@@ -59,7 +58,7 @@
         </div>
         <div class="about-text">
           <h2>Matheus Voltarelli Zaramello</h2>
-          <p>Tenho 23 anos, moro em Jundiaí e sou casado com a mulher mais doce de São Paulo.
+          <p>Tenho 23 anos, moro em Jundiaí e sou casado com a mulher mais <span class="color">incrível</span> desse mundo.
             Amo tocar instrumentos musicais sendo hoje em dia um multi-instrumentista buscando sempre me aprimorar.
             Desenho desde os 6 anos e com o passar do tempo, usando ferramentas para produção de conteúdo, eu transmito
             essa criatividade em design de imagens, logotipos e muito mais.
@@ -108,8 +107,44 @@
         <div class="portfolio-box" data-item="design">
           <img src="https://i.imgur.com/BPoqDou.png" class="portfolio-img">
           <div class="portfolio-overlay">
-            <h2>Spider-Man: Homecoming</h2>
+            <h2>Spider-Man Times Square</h2>
             <a href="https://www.instagram.com/p/COiogAtjQCc/">
+              <i class="fa-solid fa-link"></i>
+            </a>
+          </div>
+        </div>
+        <div class="portfolio-box" data-item="cortes">
+          <img src="https://i.imgur.com/VTkvRuS.jpg" class="portfolio-img">
+          <div class="portfolio-overlay">
+            <h2>HairCut #24</h2>
+            <a href="https://www.instagram.com/p/Ce0_7m1Ou8U/">
+              <i class="fa-solid fa-link"></i>
+            </a>
+          </div>
+        </div>
+        <div class="portfolio-box" data-item="cosplay">
+          <img src="https://i.imgur.com/QGZHIR9.jpg" class="portfolio-img">
+          <div class="portfolio-overlay">
+            <h2>Spider-Man Crossed Arms</h2>
+            <a href="https://www.instagram.com/p/CRtz-LvjM_4/">
+              <i class="fa-solid fa-link"></i>
+            </a>
+          </div>
+        </div>
+        <div class="portfolio-box" data-item="cortes">
+          <img src="https://i.imgur.com/3V3yvp9.jpg" class="portfolio-img">
+          <div class="portfolio-overlay">
+            <h2>HairCut #5</h2>
+            <a href="https://www.instagram.com/p/CKDEp7IhtpF/">
+              <i class="fa-solid fa-link"></i>
+            </a>
+          </div>
+        </div>
+        <div class="portfolio-box" data-item="design">
+          <img src="https://i.imgur.com/vIQ6jvf.jpg" class="portfolio-img">
+          <div class="portfolio-overlay">
+            <h2>No Way Home: Banner</h2>
+            <a href="https://www.instagram.com/p/CXgz1EIlwaB/">
               <i class="fa-solid fa-link"></i>
             </a>
           </div>
@@ -117,7 +152,7 @@
         <div class="portfolio-box" data-item="cosplay">
           <img src="https://i.imgur.com/7eofUo5.png" class="portfolio-img">
           <div class="portfolio-overlay">
-            <h2>Nathan Drake</h2>
+            <h2>Nathan Drake Attentive</h2>
             <a href="https://www.instagram.com/p/CaF41u1lUKy/">
               <i class="fa-solid fa-link"></i>
             </a>
@@ -126,8 +161,80 @@
         <div class="portfolio-box" data-item="cortes">
           <img src="https://i.imgur.com/ISY7sO9.png" class="portfolio-img">
           <div class="portfolio-overlay">
-            <h2>ZaraBarberShop</h2>
+            <h2>HairCut #20</h2>
             <a href="https://www.instagram.com/p/CRt2EZQFONa/">
+              <i class="fa-solid fa-link"></i>
+            </a>
+          </div>
+        </div>
+        <div class="portfolio-box" data-item="cosplay">
+          <img src="https://i.imgur.com/FHV1gpk.jpg" class="portfolio-img">
+          <div class="portfolio-overlay">
+            <h2>Nathan Drake Shooting</h2>
+            <a href="https://www.instagram.com/p/CNI7R-Vjikg/">
+              <i class="fa-solid fa-link"></i>
+            </a>
+          </div>
+        </div>
+        <div class="portfolio-box" data-item="design">
+          <img src="https://i.imgur.com/uFigifP.jpg" class="portfolio-img">
+          <div class="portfolio-overlay">
+            <h2>Uncharted 4: Banner</h2>
+            <a href="https://www.instagram.com/p/B_8aOTsjg7C/">
+              <i class="fa-solid fa-link"></i>
+            </a>
+          </div>
+        </div>
+        <div class="portfolio-box" data-item="cortes">
+          <img src="https://i.imgur.com/wKrGtCF.jpg" class="portfolio-img">
+          <div class="portfolio-overlay">
+            <h2>HairCut #22</h2>
+            <a href="https://www.instagram.com/p/CXJVAiclTVb/">
+              <i class="fa-solid fa-link"></i>
+            </a>
+          </div>
+        </div>
+        <div class="portfolio-box" data-item="cosplay">
+          <img src="https://i.imgur.com/zCUogl9.jpg" class="portfolio-img">
+          <div class="portfolio-overlay">
+            <h2>Nathan Drake South America</h2>
+            <a href="https://www.instagram.com/p/CMA0zJNjaCn/">
+              <i class="fa-solid fa-link"></i>
+            </a>
+          </div>
+        </div>
+        <div class="portfolio-box" data-item="cortes">
+          <img src="https://i.imgur.com/fAsNNND.jpg" class="portfolio-img">
+          <div class="portfolio-overlay">
+            <h2>HairCut #8</h2>
+            <a href="https://www.instagram.com/p/CKNQwavh8o_/">
+              <i class="fa-solid fa-link"></i>
+            </a>
+          </div>
+        </div>
+        <div class="portfolio-box" data-item="design">
+          <img src="https://i.imgur.com/oG1qyOS.jpg?1" class="portfolio-img">
+          <div class="portfolio-overlay">
+            <h2>Nathan Drake with HighLight</h2>
+            <a href="https://www.instagram.com/p/B6i2ZkJjrrt/">
+              <i class="fa-solid fa-link"></i>
+            </a>
+          </div>
+        </div>
+        <div class="portfolio-box" data-item="cosplay">
+          <img src="https://i.imgur.com/9hWXO3g.jpg" class="portfolio-img">
+          <div class="portfolio-overlay">
+            <h2>Joel Acoustic Guitar</h2>
+            <a href="https://www.instagram.com/p/CNnaiExjE1S/">
+              <i class="fa-solid fa-link"></i>
+            </a>
+          </div>
+        </div>
+        <div class="portfolio-box" data-item="design">
+          <img src="https://i.imgur.com/eU05WiQ.jpg" class="portfolio-img">
+          <div class="portfolio-overlay">
+            <h2>Doctor Strange Portal: PeterParker</h2>
+            <a href="https://www.instagram.com/p/B8zVIsvFaWr/">
               <i class="fa-solid fa-link"></i>
             </a>
           </div>
@@ -169,6 +276,6 @@
         <p style="text-align:center;margin-top:20px">2022 | <a href="https://www.instagram.com/ce_vini/">@ce_vini</a></p>
     </section>
 
-<script type="text/javascript" src="https://cevini.github.io/zara-portfolio/script.js"></script>
+<script type="text/javascript" src="js/script.js"></script>
   </body>
 </html>
