--- a/index.html
+++ b/index.html
@@ -276,6 +276,6 @@
         <p style="text-align:center;margin-top:20px">2022 | <a href="https://www.instagram.com/ce_vini/">@ce_vini</a></p>
     </section>
 
-<script type="text/javascript" src="js/script.js"></script>
+<script type="text/javascript" src="https://cevini.github.io/zara-portfolio/script.js"></script>
   </body>
 </html>
