--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <img src="https://i.imgur.com/7HHhSEG.jpg" alt="">
           </div>
           <div class="home-text">
-            <h3>Designer, Barbero & Cosplayer</h3>
+            <h3>Designer, Barbeiro & Cosplayer</h3>
             <h2>Sou <span class="color">Matheus Zaramello</span></h2>
             <p>"Seja a mudança que você quer ver no mundo"<br> - <span class="color">Mahatma Gandhi</span> </p>
             <div class="social">
