--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Portfólio de Matheus Zaramello">
     <link rel="stylesheet" href="https://cevini.github.io/zara-portfolio/style.css">
+    <link rel="shortcut icon" type="image/x-icon" href="https://i.imgur.com/eUCWyOB.png">
     <script src="https://kit.fontawesome.com/5d602d132f.js"></script>
     <title>Matheus Zaramello | Portfólio</title>
   </head>
